tests/regexp/regexp.exp
Error ----------------------------------------------------------- regexp.js:2:20

Cannot assign `patt.test(...)` to `match` because boolean is incompatible with
number.



Found 1 error
